<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_homepage"
        android:title="@string/action_homepage"
        app:showAsAction="never" />
    <item android:id="@+id/action_github"
        android:title="@string/action_github"
        app:showAsAction="never" />
    <item android:id="@+id/action_twitter"
        android:title="@string/action_twitter"
        app:showAsAction="never" />
    <item android:id="@+id/action_stackoverflow"
        android:title="@string/action_stackoverflow"
        app:showAsAction="never" />
    <item android:id="@+id/action_email"
        android:title="@string/action_email"
        app:showAsAction="never" />
</menu>
