<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textHeadline"
            android:layout_alignParentTop="true"
            android:text="@string/realm"
            android:gravity="center"
            android:textSize="100sp"
            android:onClick="onLogoClick"
            android:clickable="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/realm_logo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/realm_logo_ss"
            android:layout_marginLeft="-16dp"
            android:layout_marginTop="16dp"
            android:onClick="onLogoClick"
            android:layout_toRightOf="@+id/textHeadline" />

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewIntro"
            android:gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="@dimen/default_content_spacing"
            android:layout_below="@id/textHeadline"
            android:layout_centerHorizontal="true"
            android:textStyle="italic" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:background="?colorPrimary"
            android:layout_marginTop="@dimen/default_content_spacing"
            android:layout_below="@id/textViewIntro"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_content_spacing"
            >
            <View
                android:id="@+id/center_helper"
                android:layout_width="0dp"
                android:layout_centerInParent="true"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/button_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_content_spacing"
                android:layout_marginBottom="@dimen/default_content_spacing"
                android:textColor="?textHighLight"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_button_header"/>


            <Button
                android:id="@+id/btn_realm_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realm_perf_test_btn"
                android:layout_below="@id/button_header"
                android:onClick="onPerformanceTestClick"
                android:layout_marginBottom="@dimen/default_content_spacing"
                android:minWidth="140dp"
                android:layout_marginLeft="@dimen/default_content_spacing"
                android:layout_toRightOf="@id/center_helper" />


            <Button
                android:id="@+id/btn_sqlite_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_perf_test_btn"
                android:layout_toLeftOf="@id/center_helper"
                android:layout_marginRight="@dimen/default_content_spacing"
                android:onClick="onPerformanceTestClick"
                android:layout_marginBottom="@dimen/default_content_spacing"
                android:minWidth="140dp"
                android:layout_below="@id/button_header" />

        </RelativeLayout>



    </RelativeLayout>
</ScrollView>
